--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ DB_PORT=5432
 DB_USER=database_user_name
 DB_PASS=database_password
 DB_DIALECT=postgres
-DB_NAME_QA=database_name
+DB_NAME=database_name
